--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header">
       <div class="mdl-layout__header-row">
-        <span class="mdl-layout-title">Favicon</span>
+        <span class="mdl-layout-title" style="padding-left: 100px;">Favicon</span>
       </div>
     </header>
     <main class="mdl-layout__content">
